--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
                 <!-- Featured Project Row-->
                 <div class="row gx-0 UXCase">
                     <div class="order-0 order-lg-0 col-xl-6 col-lg-6">
-                        <img class="img-fluid mb-3 UXCaseImg" src="./assets/img/VirtualTeachingApp.png" alt="..." />
+                        <a href="./CaseStudies/UX_VTP.html">
+                            <img class="img-fluid mb-3 UXCaseImg" src="./assets/img/VirtualTeachingApp.png" alt="..." />
+                            </a>
                     </div>
                     <div class="order-0 order-lg-1 col-xl-6 col-lg-6">
                         <div class="featured-text-right text-lg-left">
@@ -82,7 +84,7 @@
                                 <p class="UXCaseTag">Mobile App</p>
                                 <p class="UXCaseTag">Figma</p>
                             </div>
-                            <a class="hvr-sweep mb-4" href="">View Case Study</a>
+                            <a class="hvr-sweep mb-4" href="./CaseStudies/UX_VTP.html">View Case Study</a>
                         </div>
                     </div>
                 </div>
@@ -102,13 +104,17 @@
                         </div>
                     </div>
                     <div class="order-0 order-lg-1 col-xl-6 col-lg-6">
-                        <img class="img-fluid mb-3 UXCaseImg" src="./assets/img/TreasuryDirect.png" alt="..." />
+                        <a>
+                            <img class="img-fluid mb-3 UXCaseImg" src="./assets/img/TreasuryDirect.png" alt="..." />
+                        </a>
                     </div>
                 </div>
 
                 <div class="row gx-0 UXCase">
                     <div class="order-0 order-lg-0 col-xl-6 col-lg-6">
-                        <img class="img-fluid mb-3 UXCaseImg" src="./assets/img/ArtsForAll.png" alt="..." />
+                        <a>
+                            <img class="img-fluid mb-3 UXCaseImg" src="./assets/img/ArtsForAll.png" alt="..." />
+                        </a>
                     </div>
                     <div class="order-0 order-lg-1 col-xl-6 col-lg-6">
                         <div class="featured-text-right text-lg-left">
@@ -140,7 +146,9 @@
                         </div>
                     </div>
                     <div class="order-0 order-lg-1 col-xl-6 col-lg-6">
-                        <img class="img-fluid mb-3 UXCaseImg" src="./assets/img/ArtsForAll.png" alt="..." />
+                        <a>
+                            <img class="img-fluid mb-3 UXCaseImg" src="./assets/img/ArtsForAll.png" alt="..." />
+                        </a>
                     </div>
                 </div>
 
