--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -30,7 +30,7 @@
             <!-- End Google Tag Manager -->
 </head>
 
-<!-- ############################################################################################################ -->
+<!-- ########################################################################################################### -->
 
 <body>
     <!-- Google Tag Manager (noscript) -->
@@ -63,7 +63,7 @@
         <div data-ix="show-signature" id="top" class="hero-section fixed-image-section home wf-section" style="opacity: 1; transition: opacity 1500ms ease 0s;">
             <div class="openingtitles container px-4 px-lg-5 d-flex h-100 align-items-center" data-ix="show-arrow-up" style="opacity: 1; transition: opacity 1500ms ease 0s;">
                 <div class="d-fle">
-                    <h1 class="my-0 mb-3">Leon Dinh</h1>
+                    <h1 class="my-0 mb-3">Virtual Teaching Platform</h1>
                     <h2 class="mt-2">
                         <p class="mb-2 fw-light">product designer and developer </p>
                         <p class="mb-2 fw-light">specialized in </p>
