--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -65,9 +65,9 @@
                 <div class="d-fle">
                     <h1 class="my-0 mb-3">Virtual Teaching Platform</h1>
                     <h2 class="mt-2">
-                        <p class="mb-2 fw-light">product designer and developer </p>
-                        <p class="mb-2 fw-light">specialized in </p>
-                        <p class="mb-2 fw-light">UX/UI, Illustrations, and 3D.</p>
+                        <p class="mb-2 fw-light">
+                            gotasddfsd
+                        </p>
                     </h2>
                 </div>
             </div>
