--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -32,7 +32,7 @@
 
 <!-- ########################################################################################################### -->
 
-<body>
+<body class="caseStudyVTP">
     <!-- Google Tag Manager (noscript) -->
     <noscript>
         <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WVDNXQD" height="0" width="0" style="display:none;visibility:hidden"></iframe>
@@ -40,7 +40,7 @@
     <!-- End Google Tag Manager (noscript) -->
 
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNavUX">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container px-4 px-lg-5">
             <a class="navbar-brand" href="https://kaider.github.io/Portfolio/">LD</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,7 +65,7 @@
         </div>
     </nav>
     <!-- Masthead-->
-    <header class="hero-section fixed-image-section-UX_VTP home masthead-sub">
+    <header class="hero-section home masthead-sub">
         <div class="container px-4 px-lg-5 d-flex h-100 align-items-center">
             <div class="d-flex">
                 <div class="col-sm-11">
@@ -84,7 +84,7 @@
         </div>
     </header>
 
-    <div class="testEmpty">
+    <div class="offwhite testEmpty">
         hello
     </div>
 
@@ -98,6 +98,6 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="../CaseStudies/UXscripts.js"></script>
+    <script src="../js/scripts.js"></script>
 </body>
 </html>
