--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <link href="css/custom.css" rel="stylesheet" />
 
         <!-- Google Tag Manager -->
         <script>
@@ -50,10 +51,38 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item fw-semibold">
-                            <a class="nav-link" href="#projects">
-                                PORTFOLIO
+                            <a class="nav-link" href="#page-top">
+                                HOME
                             </a>
                         </li>
+
+                        <li class="nav-item dropdown fw-semibold">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                              PORTFOLIO
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <div class="row mainDropdown">
+                                    <div class="col-md-6">
+                                        <ul class="">
+                                            <li>UX Case Studies</li>
+                                            <li><hr class="dropdown-divider"></li>
+                                            <li><a class="dropdown-item" href="#">Virtual Teaching Platform</a></li>
+                                            <li><a class="dropdown-item" href="#">TreasuryDirect.gov</a></li>
+                                            <li><a class="dropdown-item" href="#">ArtsForAll.com</a></li>
+                                            <li><a class="dropdown-item" href="#">Odysseia</a></li>
+                                        </ul>
+                                    </div>
+
+                                    <div class="col-md-6">
+                                        <ul class="">
+                                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                                            <li><hr class="dropdown-divider"></li>
+                                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                          </li>
                         
                         <li class="nav-item fw-semibold">
                             <a class="nav-link" href="#about">
@@ -65,7 +94,7 @@
             </div>
         </nav>
         <!-- Masthead-->
-        <header class="hero-section fixed-image-section home masthead">
+        <header class="hero-section home masthead">
             <div class="container px-4 px-lg-5 d-flex h-100 align-items-center ">
                 <div class="d-flex">
                     <div class=" ">
@@ -81,7 +110,7 @@
         </header>
 
         <!-- Projects-->
-        <section class="projects-section" id="projects">
+        <section class="offwhite projects-section" id="projects">
             <div class="container px-4 px-lg-5">
                 <p class="leadingLine text-nav text-muted mb-5 mb-lg-6">
                     Featured Projects </p>
@@ -173,7 +202,7 @@
             </div>
         </section>
 
-        <section class="text-start" id="about">
+        <section class="offwhite text-start" id="about">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-start">
                     <div class="">
