--- a/About.html
+++ b/About.html
@@ -17,8 +17,8 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="../css/styles.css" rel="stylesheet" />
-    <link href="../css/custom.css" rel="stylesheet" />
+    <link href="./css/styles.css" rel="stylesheet" />
+    <link href="./css/custom.css" rel="stylesheet" />
 
     <!-- Google Tag Manager -->
     <script>
@@ -104,7 +104,7 @@
     </header>
 
     <div class="offwhite testEmpty">
-        hello
+        hello testing
     </div>
 
 
